<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoverChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">登陆</string>
    <string name="regist">用户注册</string>
    <string name="userName">用户名</string>
    <string name="passwd">密码</string>
    <string name="userName1">用户名</string>
    <string name="passwd1">密码</string>
    <string name="passwd2">密码确认</string>
    <string name="loginbt">登陆</string>
    <string name="registbt">注册</string>
    <string name="action_back">返回</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="network_unavaible">当前网络不可用</string>
    <string name="username_unavaible">用户名为空</string>
    <string name="password_unavaible">密码为空</string>
    <string name="confirm_password_unavaible">确认密码密码为空</string>
    <string name="unsame_password">密码不一致</string>
    <string name="title_activity_alert_dialog">AlertDialog</string>
    <string name="set_nickName">设置昵称</string>
    <string name="is_loging">正在登录</string>
    <string name="is_geting_info">正在获取信息</string>
    <string name="login_fail">登录失败</string>
    <string name="is_registig">正在注册</string>
    <string name="register_success">注册成功</string>
    <string name="user_conflict">当前用户已存在</string>
    <string name="register_fail">注册失败</string>
    <string name="apps_name">亲密聊</string>
    <string name="self_center">个人中心</string>
    <string name="setting_center">设置中心</string>
    <string name="item_alarm">闹钟提醒</string>
    <string name="item_interaction">亲密互动</string>
    <string name="item_logout">退出登录</string>
    <string name="item_idea">意见反馈</string>
    <string name="item_date">爱情日志</string>
    <string name="tab_chat">聊天</string>
    <string name="tab_friend">好友</string>
    <string name="item_add">添加朋友</string>
    <string name="item_sao">扫一扫</string>
    <string name="item_my">我的二维码</string>
    <string name="conversion_name">UnKnow</string>
    <string name="conversion_unread">未读消息</string>
    <string name="conversation_time">13-01-09 15:29:11</string>
    <string name="notify_friend">待验证好友</string>
    <string name="add_friend">添加好友</string>
    <string name="location_recv">[%1$s location]</string>
    <string name="location_prefix">[my location]</string>
    <string name="voice">voice</string>
    <string name="picture">[picture]</string>
    <string name="video">[video]</string>
    <string name="file">[file]</string>
    <string name="voice_call">[voice call]</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_conversations">ConversationsActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="Remove_the_notification">账号移除</string>
    <string name="ok">确定</string>
    <string name="em_user_remove">您的账号已登出</string>
    <string name="Logoff_notification">账号冲突</string>
    <string name="connect_conflict">您的账号已在别处登陆</string>
    <string name="friend_invitation_title">好友验证</string>
    <string name="friend_invitation_message">请求加您为好友</string>
    <string name="friend_invitation_accept">同意</string>
    <string name="friend_invitation_refuse">拒绝</string>
    <string name="friend_list_title">删除好友</string>
    <string name="friend_list_delete">确认删除</string>
    <string name="friend_list_accept">确认</string>
    <string name="friend_list_refuse">取消</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音通话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="title_activity_conversation_list">ConversationListActivity</string>
 	<string name="text_ack_msg">已读</string>
     <string name="text_delivered_msg">送达</string>
     <string name="confirm_resend">确认重发</string>
     <string name="resend">重发</string>
     <string name="Into_the_blacklist">加入黑名单</string>
     <string name="send_fail">发送失败</string>
     <string name="connect_failuer_toast">连接失败</string>
    <string name="Is_download_voice_click_later">正在下载语音 请稍后点击</string>
    <string name="Recording_without_permission">没有录制权限</string>
    <string name="The_recording_time_is_too_short">说话时间太短</string>
    <string name="send_failure_please">发送失败</string>
     <string name="cant_find_pictures">没找到图片</string>
      <string name="sd_card_does_not_exist">没有SD卡</string>
      
      
        <string name="temporary_does_not">没有SD卡</string>
          <string name="The_video_to_start">没有SD卡</string>
          <string name="Whether_to_send">没有SD卡</string>
          <string name="cancel">取消</string>
           <string name="prompt">取消</string>
            <string name="Open_the_equipment_failure">取消</string>
             <string name="Video_footage">取消</string>
              <string name="Download_the_pictures">取消</string>
               <string name="Download_the_pictures_new">取消</string>
               <string name="is_down_please_wait">取消</string>
                <string name="delete">删除</string>
                <string name="forward">删除</string>
                 <string name="copy_message">删除</string>
                  <string name="delete_message">删除</string>
                   <string name="delete_video">删除</string>
                    <string name="delete_voice">删除</string>
                    <string name="Send_the_following_pictures">删除</string>
                      <string name="not_connect_to_server">无法与服务器建立连接</string>
                          <string name="call_duration">无法与服务器建立连接</string>
                              <string name="Refused">无法与服务器建立连接</string>
                                  <string name="The_other_party_has_refused_to">无法与服务器建立连接</string>
                                      <string name="The_other_is_not_online">无法与服务器建立连接</string>
                                          <string name="The_other_is_on_the_phone">无法与服务器建立连接</string>
                                              <string name="The_other_party_did_not_answer">无法与服务器建立连接</string>
                                     <string name="did_not_answer">无法与服务器建立连接</string>
                                      <string name="Has_been_cancelled">无法与服务器建立连接</string>
                                       <string name="mute">静音</string>
                                        <string name="Hands_free">无法与服务器建立连接</string>
                                         <string name="hang_up">无法与服务器建立连接</string>
                                           <string name="answer">无法与服务器建立连接</string>
                                          <string name="Are_connected_to_each_other">无法与服务器建立连接</string>
                                               <string name="Is_not_yet_connected_to_the_server">无法与服务器建立连接</string>
                                                 <string name="have_connected_with">无法与服务器建立连接</string>
                                                   <string name="In_the_call">无法与服务器建立连接</string>
                                                     <string name="The_other_party_refused_to_accept">无法与服务器建立连接</string> 
                                                     
                                                           <string name="Connection_failure">无法与服务器建立连接</string> 
                                                                 <string name="The_other_party_is_not_online">无法与服务器建立连接</string> 
                                                                       <string name="The_other_is_on_the_phone_please">无法与服务器建立连接</string> 
                                                                             <string name="The_other_is_hang_up">无法与服务器建立连接</string> 
                                                                              <string name="The_other_party_did_not_answer_new">无法与服务器建立连接</string> 
</resources>
