<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    tools:context=".ConversationsActivity" >

    
    <RelativeLayout  android:id="@+id/conversion_list"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/conversion_headimg"
            android:src="@drawable/image_touxiang"/>
     
        <TextView android:id="@+id/conversation_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/conversation_time"
            />
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/conversion_headimg"
            android:layout_toLeftOf="@id/conversation_time"
            android:orientation="vertical">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conversion_name"
            android:text="@string/conversion_name"
            android:textSize="13sp"/>
         <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:id="@+id/conversion_unread"
             android:textSize="11sp"
            android:text="@string/conversion_unread"/>
        </LinearLayout>
     
    </RelativeLayout>
       <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line_addmore"
            android:layout_below="@id/conversion_list"/>
</RelativeLayout>
